--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,5 +49,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Slavs -- Folklore'
 - !lcc 'PZ'
+- GITenberg
 title: The Russian Grandmother's Wonder Tales
 url: http://www.gutenberg.org/ebooks/45214
